--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,9 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AgendaFX
+application.title=LanguageApp
 application.vendor=Roberto Garrido Trillo
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -37,6 +38,8 @@ endorsed.classpath=
 excludes=
 file.reference.jaxb-api-2.3.1.jar=C:\\Program Files\\Java\\librerias\\javafx\\xml\\jaxb\\jaxb-api-2.3.1\\jaxb-api-2.3.1.jar
 file.reference.jaxb-impl-2.3.1.jar=C:\\Program Files\\Java\\librerias\\javafx\\xml\\jaxb\\jaxb-api-2.3.1\\jaxb-impl-2.3.1.jar
+file.reference.jmetro-11.6.11-javadoc.jar=C:\\Program Files\\Java\\librerias\\jmetro\\jmetro-11.6.11-javadoc.jar
+file.reference.jmetro-11.6.11.jar=C:\\Program Files\\Java\\librerias\\jmetro\\jmetro-11.6.11.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -44,7 +47,9 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.JavaFX.classpath}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-impl-2.3.1.jar}
+    ${file.reference.jaxb-impl-2.3.1.jar}:\
+    ${file.reference.jmetro-11.6.11.jar}:\
+    ${file.reference.jmetro-11.6.11-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,8 +58,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=14
-javac.target=14
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -101,11 +106,11 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_14
+native.bundling.enabled=true
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=--module-path "C:\\Program Files\\Java\\librerias\\javafx\\javafx-sdk-14.0.1\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
     ${libs.JavaFX.classpath}
